# 3D-Game

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  setup_glad.sh
include/: Camera.h  Game.h  GameObject.h  Mesh.h  Model.h  Renderer.h  Shader.h  Window.h
include/glad/: glad.h
src/: Camera.cpp  Game.cpp  GameObject.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
